# local-codex-usage-viewer

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  codex_usage.py  install.sh  pyproject.toml
.cursor/skills/local-codex-usage-viewer/: SKILL.md
skills/local-codex-usage-viewer/: SKILL.md
