[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "local-codex-usage-viewer"
version = "0.1.4"
description = "Offline terminal viewer for local Codex usage logs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "uricorn" }
]
keywords = ["codex", "usage", "analytics", "terminal", "logs"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/uricorn/local-codex-usage-viewer"
Repository = "https://github.com/uricorn/local-codex-usage-viewer"
Issues = "https://github.com/uricorn/local-codex-usage-viewer/issues"

[project.scripts]
cuv = "codex_usage:main"
codex-usage = "codex_usage:main"
local-codex-usage-viewer = "codex_usage:main"

[tool.setuptools]
py-modules = ["codex_usage"]
